# FoldaaWeb

./: .gitignore  check-brackets.js  debug-broadcasts.js  find-project.js  generated.js  gh_log.txt  inspect-configs.js  list-all.js  output.txt  package-lock.json  package.json  test-insert.js  test-rpc.js  test.js  test.ts  tmp_color_replace.js  tmp_text_clamp.js  vercel.json  verify-foldaa.ts
.github/workflows/: build-mac.yml
apps/terminal-ui/: build_output.txt  debug-os.js  eslint_output.json  next.config.ts  package-lock.json  package.json  test-api.js  test-insert.js  tsc_output.txt  vercel.json
brain/: agents.md  ai-interaction.md  api.md  architecture.md  brain.md  campfire.md  cli.md  data-model.md  glossary.md  infra-automation.md  infra.md  manifest-template.md  nodes.md  principles.md  product.md  runtime.md  vision.md  workflows.md
docs/: brain.md  cli.md  infra.md
examples/: app.json
scripts/: deploy.sh  test-foldaa.ts  verify-branding.ts
supabase/: config.toml
supabase/functions/: deno.json
supabase/migrations/: 20260318000000_unify_project_model.sql  20260318000001_v2_core_schema.sql  20260318000002_v2_1_hardening.sql  20260318000003_v2_2_critical_fixes.sql  20260320000000_create_mac_builds_table.sql  20260327000000_notifications_pro.sql  20260328134149_add_profile_sort_order.sql
tauri-template/: package.json
tauri-template/src-tauri/: Cargo.toml  tauri.conf.json
templates/: temp-manifest-template.md
templates/prompts/: add-feature.md
test-foldaa-app-v2/: foldaa.json  package-lock.json  package.json
vision/: nodes.md  workflows.md
(+149 files in other folders)
